<resources>
    <string name="app_name">VetSync App</string>
    <string name="logoDescription">Logo de VetSync App</string>

    <!--Login Screen-->
    <string name="btnLogin">Login</string>
    <string name="passwordMsg">Contraseña</string>
    <string name="emailMsg">Email</string>
    <string name="msgLoginTitle">Bienvenido</string>
    <string name="msgLoginSubTitle">Es momento de iniciar sesión</string>
    <string name="msgRegisterSubTitle">Es momento de crear tu cuenta</string>
    <string name="login_register_text">¿No tienes una cuenta? ¡Registrate!</string>

    <!--Add/edit staff screen-->
    <string name="msgEditStaffTitle">Agregar staff</string>
    <string name="msgEditStaffSubTitle">Incluye todos los datos para completar el registro del nuevo miembro</string>
    <string name="name_txt">Nombre completo</string>
    <string name="name_txt_example">Alfonso Cotto</string>
    <string name="phone_txt">Número de contacto</string>
    <string name="phone_txt_example">7065 9845</string>
    <string name="member_type_txt">Cargo dentro del staff</string>
    <string name="staff_member_image">Staff member image</string>
    <string name="btnSave">Guardar datos</string>

    <string-array name="member_types">
        <item>Doctor</item>
        <item>Secretaria</item>
        <item>Auxiliar</item>
    </string-array>

    <!--Home staff screen-->
    <string name="msgHomeStaffTitle">Staff</string>
    <string name="msgHomeStaffSubTitle">Listado de los miembros del staff registrados</string>
    <string name="plus">+</string>
    <string name="staffName">Josías Alvarenga</string>
    <string name="staffType">Doctor</string>
    <string name="staffNumber">5069 6872</string>
    <string name="staff_member_picture">Staff member picture</string>
    <string name="btnDelete">Eliminar datos</string>

    <!--Add/edit patient screen-->
    <string name="msgEditPetTitle">Registrar paciente</string>
    <string name="msgPetStaffSubTitle">Completa los campos para registrar un nuevo paciente</string>
    <string name="name_pet_txt_example">Juanito Pelusa Duque</string>
    <string name="name_pet_txt">Nombre</string>
    <string name="owner_txt">Dueño del paciente (Familia)</string>
    <string name="age_txt">Edad (meses)</string>
    <string name="weight_txt">Peso (libras)</string>
    <string name="weight_txt_example">12.6</string>
    <string name="age_txt_example">29</string>
    <string name="diagnosis_pet_txt">Diagnóstico</string>
    <string name="owner_txt_example">Rafael Duque</string>
    <string name="breed_pet_txt">Raza</string>
    <string name="breed_pet_txt_example">Aguacatero (Mixto)</string>
    <string name="diagnosis_pet_txt_example">Pulgas y garrapatas\nAlergia a colorantes en comida</string>
    <string name="phone_pet_txt">Número de contacto</string>
    <string name="phone_pet_txt_example">6049 8523</string>

    <!--Home patient screen-->
    <string name="msgHomePatientTitle">Pacientes</string>
    <string name="msgHomePatientSubTitle">Listado de los pacientes registrados en la veterinaria</string>
    <string name="id_pet_txt_example">362</string>

    <!--Home appointment screen-->
    <string name="date_txt">Fecha</string>
    <string name="status_appointment_txt_example">Próximo</string>
    <string name="status_appointment_txt">Estado</string>
    <string name="hour_txt_example">15:30</string>
    <string name="hour_txt">Hora</string>
    <string name="fecha_txt">Fecha</string>
    <string name="appointment_details_txt">Notas de la cita</string>
    <string name="contact_txt">Información de contacto</string>
    <string name="date_txt_example">20/12/2024</string>
    <string name="msgHistoryPatientTitle">Historial de citas</string>
    <string name="msgHistoryAppointmentSubTitle">Listado de citas agendadas</string>

    <!--Add/edit appointment screen-->
    <string name="msgEditAppointmentTitle">Agendar cita</string>
    <string name="msgAppointmentSubTitle">Completa los campos para agendar una cita</string>
    <string name="patient_pet_txt">Ingresa el paciente</string>
    <string name="appointment_contact_txt">Información de contacto</string>
    <string name="appointment_status_txt">Estado de la cita</string>

    <string-array name="statuses">
        <item>Agendada</item>
        <item>Completada</item>
        <item>Cancelada</item>
    </string-array>


    <string name="logout">Cerrar sesión</string>
    <string name="msgHomeProfileTitle">Perfil</string>
    <string name="msgHomeProfileSubTitle">Puedes editar tus datos principales de inicio de sesión</string>
    <string name="email_txt_example">example@example.com</string>
    <string name="password_txt_example">password</string>
    <string name="confirm_password_txt">Confirmar contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>