<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="25sp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_50"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp">

        <TextView
            android:id="@+id/petName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/name_pet_txt_example"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/petBreed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/breed_pet_txt_example"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/petName"
            app:layout_constraintTop_toBottomOf="@id/petName" />

        <TextView
            android:id="@+id/petId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/id_pet_txt_example"
            android:textColor="@color/white"
            android:background="@color/primary"
            android:textSize="16sp"
            android:layout_marginTop="3dp"
            android:paddingStart="10dp"
            android:paddingEnd="8dp"
            android:paddingTop="5dp"
            android:paddingBottom="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/petName"/>

        <TextView
            android:id="@+id/appointmentStatusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/status_appointment_txt"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/petName"
            app:layout_constraintTop_toBottomOf="@id/petBreed"/>

        <TextView
            android:id="@+id/appointmentStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/status_appointment_txt_example"
            android:textSize="14sp"
            android:layout_marginStart="6dp"
            app:layout_constraintStart_toEndOf="@id/appointmentStatusLabel"
            app:layout_constraintTop_toTopOf="@id/appointmentStatusLabel"/>

        <TextView
            android:id="@+id/appointmentHourLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/hour_txt"
            android:textColor="@color/gray_600"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/petName"
            app:layout_constraintTop_toBottomOf="@id/appointmentStatus"/>

        <TextView
            android:id="@+id/appointmentHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/hour_txt_example"
            android:textColor="@color/primary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/appointmentHourLabel"
            app:layout_constraintTop_toBottomOf="@id/appointmentHourLabel"/>

        <TextView
            android:id="@+id/appointmentDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/fecha_txt"
            android:textColor="@color/gray_600"
            android:layout_marginStart="25dp"
            android:textSize="12sp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/appointmentHourLabel"/>

        <TextView
            android:id="@+id/appointmentDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/date_txt_example"
            android:textColor="@color/primary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/appointmentDateLabel"
            app:layout_constraintTop_toTopOf="@id/appointmentHour"/>

        <TextView
            android:id="@+id/petOwnerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/contact_txt"
            android:textColor="@color/gray_600"
            android:textSize="13sp"
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="@id/petName"
            app:layout_constraintTop_toBottomOf="@id/appointmentDate"/>

        <TextView
            android:id="@+id/petOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/owner_txt_example"
            android:textColor="@color/gray_600"
            android:textSize="13sp"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/petOwnerLabel"
            app:layout_constraintTop_toTopOf="@id/petOwnerLabel"/>

        <TextView
            android:id="@+id/petPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/phone_pet_txt_example"
            android:textColor="@color/gray_600"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@id/petOwner"
            app:layout_constraintTop_toBottomOf="@id/petOwnerLabel"/>

        <TextView
            android:id="@+id/petDiagnosisLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/appointment_details_txt"
            android:textColor="@color/gray_600"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/petName"
            app:layout_constraintTop_toBottomOf="@id/petPhone"/>

        <TextView
            android:id="@+id/petDiagnosis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/diagnosis_pet_txt_example"
            android:textColor="@color/gray_600"
            android:layout_marginStart="10dp"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@id/petDiagnosisLabel"
            app:layout_constraintTop_toBottomOf="@id/petDiagnosisLabel"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>