<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".HomePageActivity">

    <ImageView
        android:id="@+id/editAppointmentImage"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:contentDescription="@string/staff_member_image"
        android:src="@drawable/calendar"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft" />

    <TextView
        android:id="@+id/editAppointmentTitle"
        style="@style/h4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/msgEditAppointmentTitle"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@+id/editAppointmentImage" />

    <TextView
        android:id="@+id/editAppointmentSubTitle"
        style="@style/h2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/msgAppointmentSubTitle"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/editAppointmentTitle" />

    <TextView
        android:id="@+id/labelPatientPet"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/patient_pet_txt"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/editAppointmentSubTitle"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        style="@style/h1" />

    <EditText
        android:id="@+id/inputNamePet"
        android:layout_width="0dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="15dp"
        android:inputType="text"
        android:hint="@string/id_pet_txt_example"
        app:layout_constraintTop_toBottomOf="@id/labelPatientPet"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        android:autofillHints=""
        style="@style/txtInputSecondary" />


    <TextView
        android:id="@+id/labelAppointmentStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/appointment_status_txt"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/inputNamePet"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        style="@style/h1" />

    <Spinner
        android:id="@+id/spinner_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@id/labelAppointmentStatus"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        />

    <TextView
        android:id="@+id/labelAppointmentDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date_txt"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/spinner_status"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        style="@style/h1" />

    <EditText
        android:id="@+id/inputAppointmentDate"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="20dp"
        android:inputType="date"
        android:hint="@string/date_txt_example"
        app:layout_constraintTop_toBottomOf="@id/labelAppointmentDate"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        android:autofillHints=""
        style="@style/txtInputSecondary" />

    <TextView
        android:id="@+id/labelAppointmentHour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hour_txt"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toTopOf="@id/labelAppointmentDate"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        style="@style/h1" />

    <EditText
        android:id="@+id/inputAppointmentHour"
        android:layout_width="0dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="15dp"
        android:inputType="numberDecimal"
        android:hint="@string/hour_txt_example"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@id/labelAppointmentHour"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        android:autofillHints=""
        style="@style/txtInputSecondary" />

    <TextView
        android:id="@+id/labelAppointmentContact"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/appointment_contact_txt"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/inputAppointmentDate"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        style="@style/h1" />

    <EditText
        android:id="@+id/inputAppointmentContactName"
        android:layout_width="0dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="15dp"
        android:inputType="text"
        android:hint="@string/name_txt_example"
        app:layout_constraintTop_toBottomOf="@id/labelAppointmentContact"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        android:autofillHints=""
        style="@style/txtInputSecondary" />

    <EditText
        android:id="@+id/inputAppointmentContactPhone"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="15dp"
        android:inputType="phone"
        android:hint="@string/phone_txt_example"
        app:layout_constraintTop_toBottomOf="@id/inputAppointmentContactName"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        android:autofillHints=""
        style="@style/txtInputSecondary" />

    <TextView
        android:id="@+id/labelDiagnosisPet"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/appointment_details_txt"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/inputAppointmentContactPhone"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        style="@style/h1" />

    <EditText
        android:id="@+id/inputDiagnosisPet"
        android:layout_width="0dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="15dp"
        android:inputType="text"
        android:hint="@string/diagnosis_pet_txt_example"
        app:layout_constraintTop_toBottomOf="@id/labelDiagnosisPet"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        android:autofillHints=""
        style="@style/txtInputSecondary" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDeleteStaff"
        android:layout_width="0dp"
        android:layout_height="@dimen/btnMainHeight"
        android:layout_marginTop="35dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/btnDelete"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/inputDiagnosisPet"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        style="@style/secondaryButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaveStaff"
        android:layout_width="0dp"
        android:layout_height="@dimen/btnMainHeight"
        android:layout_marginTop="35dp"
        android:layout_marginStart="15dp"
        android:text="@string/btnSave"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/btnDeleteStaff"
        app:layout_constraintTop_toBottomOf="@+id/inputDiagnosisPet"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        style="@style/primaryButton" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
